<resources>
    <string name="app_name">BMTA_SemPrace</string>
    <string name="title_home">Home</string>
    <string name="title_relapses">Relapses</string>
    <string name="title_profile">Profile</string>
    <string name="daysCount">0</string>
    <string name="hoursCount">0</string>
    <string name="minutesCount">0</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="i_smoked">I smoked</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_how_many_cigs_you_smoke_per_day">Enter how many cigs you smoke per day</string>
    <string name="enter_the_price_of_one_cig_pack_in_k">Enter the price of one cig pack, in Kč</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="cigs_amount">Enter amount</string>
    <string name="price_value">Enter price</string>
    <string name="your_name">Your name</string>
    <string name="relapse">Relapse</string>
    <string name="refresh">Refresh</string>
    <string name="txt_relapse">You relapsed 0 times</string>
    <string name="money_saved">Money saved</string>
    <string name="cigarettes">Cigarettes</string>
    <string name="packs">Packs</string>
    <string name="zero">0</string>
    <string name="motivation">Remember why you quit</string>
    <string name="saved_example">50 Kč</string>
    <string name="set_motivation">Set motivation</string>
    <string name="price">121 Kč</string>
    <string name="you_used_to_smoke">You used to smoke</string>
    <string name="number">7</string>
    <string name="cigs_per_day">cigs per day</string>
    <string name="with_average_pack_price">With average pack price</string>
    <string name="delimeter">___________________</string>
    <string name="edit">Edit</string>
</resources>