<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="#b6f9c9">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="360dp"
        android:layout_height="518dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toTopOf="@+id/btnStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/noSmokingCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/daysLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#25A244"
                    android:baselineAligned="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/days"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/txtDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/daysCount"
                        android:textAlignment="center"
                        android:textColor="#FFFFFFFF"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hoursLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#2DC653"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblHours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/hours"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/txtHours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/hoursCount"
                        android:textAlignment="center"
                        android:textColor="#FFFFFFFF"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/minutesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#4AD66D"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblMinutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/minutes"
                        android:textColor="#FFFFFFFF"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/txtMinutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/minutesCount"
                        android:textAlignment="center"
                        android:textColor="#FFFFFFFF"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/packsNotBoughtCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/moneySavedCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/timeSavedCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="#25A244"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/i_smoked"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>